added Admin menu functionality